# sourcery-rules-generator

./: .coveragerc  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
sourcery_rules_generator/: __main__.py  cli.py  dependencies.py  expensive_loop.py  models.py  sourcery_rules_generator.py  voldemort.py  yaml_converter.py
sourcery_rules_generator/cli/: cli.py  dependencies_cli.py  expensive_loop_cli.py  voldemort_cli.py
tests/: conftest.py  test_version.py
tests/end-to-end/: test_cli.py
tests/fixtures/dependency-rules/: core-imported-only-by-api.yaml  sqlalchemy-imported-only-by-2.yaml
tests/integration/: test_cli.py  test_dependencies_yaml_rules.py
tests/unit/: test_cli.py  test_dependencies.py  test_expensive_loop.py  test_sourcery_rules_generator.py  test_voldemort.py
